# milkbox_cuda

./: CMakeLists.txt  CMakeLists.txt.user.xJ3317  README.md
app/: main.cpp
mb_cuda/common/: point_cloud.h  point_types.h
mb_cuda/filters/: pass_through.cu  pass_through.h  statistical_outlier_removal.cu  statistical_outlier_removal.h  voxel_grid.cu  voxel_grid.h
mb_cuda/io/: host_device.cu  host_device.h  pcl_thrust.cpp  pcl_thrust.h
test/: test.cpp
